--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/VijayAnand.MauiToolkit.Pro.Net8.csproj
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/VijayAnand.MauiToolkit.Pro.Net8.csproj
@@ -68,6 +68,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<None Include="overview.md" Pack="true" PackagePath="\" />
 		<None Include="release-notes-net8.txt" />
 	</ItemGroup>
