--- a/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net8.csproj
+++ b/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net8.csproj
@@ -1,18 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="UTF-8" ?>
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
 
 		<!-- Project Options -->
-
 		<Nullable>enable</Nullable>
+		<LangVersion>latest</LangVersion>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<RootNamespace>VijayAnand.Toolkit.Markup</RootNamespace>
-		<LangVersion>latest</LangVersion>
 		<EnableDefaultCompileItems>false</EnableDefaultCompileItems>
 
 		<!-- NuGet Package Info -->
-
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>VijayAnand.Toolkit.Markup</PackageId>
 		<Authors>Vijay Anand E G</Authors>
@@ -24,11 +23,11 @@
 		<RepositoryUrl>https://github.com/egvijayanand/dotnet-maui-toolkit</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>.NET,MAUI,Xamarin,Forms,C#,CSharp,Markup,Toolkit,Fluent,API,Shared</PackageTags>
-		<PackageReleaseNotes>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)/release-notes-net6.txt"))</PackageReleaseNotes>
+		<PackageReleaseNotes>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)\release-notes-net8.txt"))</PackageReleaseNotes>
 		<AssemblyName>VijayAnand.Toolkit.Markup</AssemblyName>
-		<Version>1.0.0</Version>
-		<AssemblyVersion>1.0.0.0</AssemblyVersion>
-		<FileVersion>1.0.0.0</FileVersion>
+		<Version>3.0.0</Version>
+		<AssemblyVersion>3.0.0.0</AssemblyVersion>
+		<FileVersion>3.0.0.0</FileVersion>
 		<PackageReadmeFile>overview.md</PackageReadmeFile>
 		<PackageProjectUrl>https://egvijayanand.in/</PackageProjectUrl>
 		<NeutralLanguage>en</NeutralLanguage>
@@ -46,13 +45,12 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="overview.md" Pack="true" PackagePath="\" />
-		<None Include="release-notes-net6.txt" />
-		<None Remove="release-notes-net7.txt" />
+		<None Remove="release-notes-net6.txt" />
+		<None Include="release-notes-net7.txt" />
 	</ItemGroup>
 
-	<PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
+	<PropertyGroup Condition="'$(TargetFramework)' == 'net8.0'">
 		<UseMaui>true</UseMaui>
-		<!--<MauiVersion>6.0.548</MauiVersion>-->
 		<SingleProject>true</SingleProject>
 	</PropertyGroup>
 
@@ -61,8 +59,10 @@
 		<PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="2.0.6" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.0.0" />
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+		<PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.0.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
@@ -70,7 +70,7 @@
 		<None Include="**\*.maui.cs" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
 		<Compile Include="**\*.shared.cs;**\*.maui.cs" />
 		<None Include="**\*.forms.cs" />
 	</ItemGroup>
