--- a/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net8.csproj
+++ b/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net8.csproj
@@ -46,7 +46,8 @@
 	<ItemGroup>
 		<None Include="overview.md" Pack="true" PackagePath="\" />
 		<None Remove="release-notes-net6.txt" />
-		<None Include="release-notes-net7.txt" />
+		<None Remove="release-notes-net7.txt" />
+		<None Include="release-notes-net8.txt" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(TargetFramework)' == 'net8.0'">
