--- a/src/MauiBlazor.Markup/MauiBlazor.Markup/MauiBlazor.Markup.Net6.csproj
+++ b/src/MauiBlazor.Markup/MauiBlazor.Markup/MauiBlazor.Markup.Net6.csproj
@@ -55,5 +55,6 @@
 	<ItemGroup>
 		<None Remove="release-notes-net7.txt" />
 		<None Remove="release-notes-net8.txt" />
+		<None Remove="release-notes-net9.txt" />
 	</ItemGroup>
 </Project>
