--- a/src/MauiBlazor.Markup/MauiBlazor.Markup/MauiBlazor.Markup.Net8.csproj
+++ b/src/MauiBlazor.Markup/MauiBlazor.Markup/MauiBlazor.Markup.Net8.csproj
@@ -4,7 +4,7 @@
 
 		<!-- .NET MAUI Options -->
 		<UseMaui>true</UseMaui>
-		<MauiVersion>8.0.10</MauiVersion>
+		<MauiVersion>8.*</MauiVersion>
 		<SingleProject>true</SingleProject>
 
 		<!-- Project Options -->
