--- a/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net7.csproj
+++ b/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net7.csproj
@@ -49,6 +49,7 @@
 		<None Remove="release-notes-net6.txt" />
 		<None Include="release-notes-net7.txt" />
 		<None Remove="release-notes-net8.txt" />
+		<None Remove="release-notes-net9.txt" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(TargetFramework)' == 'net7.0'">
