--- a/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net8.csproj
+++ b/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net8.csproj
@@ -48,10 +48,12 @@
 		<None Remove="release-notes-net6.txt" />
 		<None Remove="release-notes-net7.txt" />
 		<None Include="release-notes-net8.txt" />
+		<None Remove="release-notes-net9.txt" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(TargetFramework)' == 'net8.0'">
 		<UseMaui>true</UseMaui>
+		<MauiVersion>8.*</MauiVersion>
 		<SingleProject>true</SingleProject>
 	</PropertyGroup>
 
