--- a/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net8.csproj
+++ b/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net8.csproj
@@ -15,7 +15,7 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>VijayAnand.Toolkit.Markup</PackageId>
 		<Authors>Vijay Anand E G</Authors>
-		<Copyright>Copyright &#169; 2022-2023 Vijay Anand E G</Copyright>
+		<Copyright>Copyright &#169; 2023-2024 Vijay Anand E G</Copyright>
 		<Product>VijayAnand.Toolkit.Markup is a set of fluent helper methods and classes for Xamarin.Forms / .NET MAUI to facilitate rapid UI development and better reuse in C#.</Product>
 		<Title>VijayAnand.Toolkit.Markup</Title>
 		<Description>VijayAnand.Toolkit.Markup is a set of fluent helper methods and classes for Xamarin.Forms / .NET MAUI to facilitate rapid UI development and better reuse in C#.</Description>
@@ -53,7 +53,7 @@
 
 	<PropertyGroup Condition="'$(TargetFramework)' == 'net8.0'">
 		<UseMaui>true</UseMaui>
-		<MauiVersion>8.*</MauiVersion>
+		<MauiVersion>8.0.3</MauiVersion>
 		<SingleProject>true</SingleProject>
 	</PropertyGroup>
 
