Integrated builder hosting extension method #114 #126

--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/VijayAnand.MauiToolkit.Core.Net6.csproj
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Core/VijayAnand.MauiToolkit.Core.Net6.csproj
@@ -55,6 +55,9 @@
 
 	<ItemGroup>
 		<None Remove="release-notes-net7.txt" />
+		<None Remove="release-notes-net8.txt" />
+		<None Remove="release-notes-net9.txt" />
+		<None Remove="release-notes-net10.txt" />
 	</ItemGroup>
 
 </Project>
