--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/VijayAnand.MauiToolkit.Pro.Net6.csproj
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Pro/VijayAnand.MauiToolkit.Pro.Net6.csproj
@@ -10,7 +10,7 @@
 
 		<!-- .NET MAUI -->
 		<UseMaui>true</UseMaui>
-		<MauiVersion>6.0.548</MauiVersion>
+		<!-- <MauiVersion>6.0.553</MauiVersion> -->
 		<SingleProject>true</SingleProject>
 
 		<!-- Project Options -->
