--- a/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Net8.csproj
+++ b/src/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit/VijayAnand.MauiToolkit.Net8.csproj
@@ -64,7 +64,7 @@
 	</PropertyGroup>-->
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -80,6 +80,8 @@
 	<ItemGroup>
 		<None Remove="release-notes-net6.txt" />
 		<None Remove="release-notes-net7.txt" />
+		<None Remove="release-notes-net9.txt" />
+		<None Remove="release-notes-net10.txt" />
 	</ItemGroup>
 
 	<ItemGroup>
