--- a/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net8.csproj
+++ b/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net8.csproj
@@ -1,85 +1,92 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
+    <PropertyGroup>
+        <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
 
-		<!-- Project Options -->
-		<Nullable>enable</Nullable>
-		<LangVersion>latest</LangVersion>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<RootNamespace>VijayAnand.Toolkit.Markup</RootNamespace>
-		<EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+        <!-- Project Options -->
+        <Nullable>enable</Nullable>
+        <LangVersion>latest</LangVersion>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <RootNamespace>VijayAnand.Toolkit.Markup</RootNamespace>
+        <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
 
-		<!-- NuGet Package Info -->
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<PackageId>VijayAnand.Toolkit.Markup</PackageId>
-		<Authors>Vijay Anand E G</Authors>
-		<Copyright>Copyright &#169; 2023-2025 Vijay Anand E G</Copyright>
-		<Product>VijayAnand.Toolkit.Markup is a set of fluent helper methods and classes for Xamarin.Forms / .NET MAUI to facilitate rapid UI development and better reuse in C#.</Product>
-		<Title>VijayAnand.Toolkit.Markup</Title>
-		<Description>VijayAnand.Toolkit.Markup is a set of fluent helper methods and classes for Xamarin.Forms / .NET MAUI to facilitate rapid UI development and better reuse in C#.</Description>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<RepositoryUrl>https://github.com/egvijayanand/dotnet-maui-toolkit</RepositoryUrl>
-		<RepositoryType>git</RepositoryType>
-		<PackageTags>.NET,MAUI,Xamarin,Forms,C#,CSharp,Markup,Toolkit,Fluent,API,Shared</PackageTags>
-		<PackageReleaseNotes>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)\release-notes-net8.txt"))</PackageReleaseNotes>
-		<AssemblyName>VijayAnand.Toolkit.Markup</AssemblyName>
-		<Version>3.0.0</Version>
-		<AssemblyVersion>3.0.0.0</AssemblyVersion>
-		<FileVersion>3.0.0.0</FileVersion>
-		<PackageReadmeFile>overview.md</PackageReadmeFile>
-		<PackageProjectUrl>https://egvijayanand.in/</PackageProjectUrl>
-		<NeutralLanguage>en</NeutralLanguage>
-		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+        <!-- NuGet Package Info -->
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageId>VijayAnand.Toolkit.Markup</PackageId>
+        <Authors>Vijay Anand E G</Authors>
+        <Copyright>Copyright &#169; 2023-2025 Vijay Anand E G</Copyright>
+        <Product>VijayAnand.Toolkit.Markup is a set of fluent helper methods and classes for Xamarin.Forms / .NET MAUI to facilitate rapid UI development and better reuse in C#.</Product>
+        <Title>VijayAnand.Toolkit.Markup</Title>
+        <Description>VijayAnand.Toolkit.Markup is a set of fluent helper methods and classes for Xamarin.Forms / .NET MAUI to facilitate rapid UI development and better reuse in C#.</Description>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/egvijayanand/dotnet-maui-toolkit</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>.NET,MAUI,Xamarin,Forms,C#,CSharp,Markup,Toolkit,Fluent,API,Shared</PackageTags>
+        <PackageReleaseNotes>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)\release-notes-net8.txt"))</PackageReleaseNotes>
+        <AssemblyName>VijayAnand.Toolkit.Markup</AssemblyName>
+        <Version>3.0.0</Version>
+        <AssemblyVersion>3.0.0.0</AssemblyVersion>
+        <FileVersion>3.0.0.0</FileVersion>
+        <PackageReadmeFile>overview.md</PackageReadmeFile>
+        <PackageProjectUrl>https://egvijayanand.in/</PackageProjectUrl>
+        <NeutralLanguage>en</NeutralLanguage>
+        <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 
-		<!-- Source Linking -->
-		<PublishRepositoryUrl>true</PublishRepositoryUrl>
-		<EmbedUntrackedSources>true</EmbedUntrackedSources>
-		<!--<DebugType>embedded</DebugType>-->
-		<IncludeSymbols>true</IncludeSymbols>
-		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <!-- Source Linking -->
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <!--<DebugType>embedded</DebugType>-->
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 
-		<!-- Package Validation -->
-		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-	</PropertyGroup>
-	<ItemGroup>
-		<None Include="overview.md" Pack="true" PackagePath="\" />
-		<None Remove="release-notes-net6.txt" />
-		<None Remove="release-notes-net7.txt" />
-		<None Include="release-notes-net8.txt" />
-		<None Remove="release-notes-net9.txt" />
-	</ItemGroup>
+        <!-- Package Validation -->
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    </PropertyGroup>
 
-	<PropertyGroup Condition="'$(TargetFramework)' == 'net8.0'">
-		<UseMaui>true</UseMaui>
-		<MauiVersion>8.0.91</MauiVersion>
-		<SingleProject>true</SingleProject>
-	</PropertyGroup>
+    <ItemGroup>
+        <AssemblyMetadata Include="Serviceable" Value="True" />
+        <None Include="overview.md" Pack="true" PackagePath="\" />
+        <None Include="release-notes-net8.txt" />
+    </ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-		<PackageReference Include="Xamarin.Forms" Version="5.0.0.2612" />
-		<PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="2.0.6" />
-	</ItemGroup>
+    <ItemGroup>
+        <None Remove="release-notes-net9.txt" />
+        <None Remove="release-notes-net10.txt" />
+    </ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<!-- <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" /> -->
-		<PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
-	</ItemGroup>
+    <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <DefineConstants>$(DefineConstants);FORMS</DefineConstants>
+    </PropertyGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-		<Compile Include="**\*.shared.cs;**\*.forms.cs" />
-		<None Include="**\*.maui.cs" />
-	</ItemGroup>
+    <PropertyGroup Condition="'$(TargetFramework)' == 'net8.0'">
+        <UseMaui>true</UseMaui>
+        <SingleProject>true</SingleProject>
+        <DefineConstants>$(DefineConstants);MAUI</DefineConstants>
+    </PropertyGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
-		<Compile Include="**\*.shared.cs;**\*.maui.cs" />
-		<None Include="**\*.forms.cs" />
-	</ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2612" />
+        <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="2.0.6" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-	</ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+        <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <Compile Include="**\*.shared.cs;**\*.forms.cs" />
+        <None Include="**\*.maui.cs" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+        <Compile Include="**\*.shared.cs;**\*.maui.cs" />
+        <None Include="**\*.forms.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+    </ItemGroup>
 
 </Project>
