--- a/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net10.csproj
+++ b/src/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup/VijayAnand.Toolkit.Markup.Net10.csproj
@@ -15,7 +15,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageId>VijayAnand.Toolkit.Markup</PackageId>
         <Authors>Vijay Anand E G</Authors>
-        <Copyright>Copyright &#169; 2024-2025 Vijay Anand E G</Copyright>
+        <Copyright>Copyright &#169; 2025 Vijay Anand E G</Copyright>
         <Product>VijayAnand.Toolkit.Markup is a set of fluent helper methods and classes for Xamarin.Forms / .NET MAUI to facilitate rapid UI development and better reuse in C#.</Product>
         <Title>VijayAnand.Toolkit.Markup</Title>
         <Description>VijayAnand.Toolkit.Markup is a set of fluent helper methods and classes for Xamarin.Forms / .NET MAUI to facilitate rapid UI development and better reuse in C#.</Description>
@@ -23,7 +23,7 @@
         <RepositoryUrl>https://github.com/egvijayanand/dotnet-maui-toolkit</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>.NET,MAUI,Xamarin,Forms,C#,CSharp,Markup,Toolkit,Fluent,API,Shared</PackageTags>
-        <PackageReleaseNotes>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)\release-notes-net9.txt"))</PackageReleaseNotes>
+        <PackageReleaseNotes>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)\release-notes-net10.txt"))</PackageReleaseNotes>
         <AssemblyName>VijayAnand.Toolkit.Markup</AssemblyName>
         <Version>5.0.0</Version>
         <AssemblyVersion>5.0.0.0</AssemblyVersion>
