--- a/src/MauiBlazor.Markup/MauiBlazor.Markup/MauiBlazor.Markup.Net9.csproj
+++ b/src/MauiBlazor.Markup/MauiBlazor.Markup/MauiBlazor.Markup.Net9.csproj
@@ -4,7 +4,6 @@
 
 		<!-- .NET MAUI Options -->
 		<UseMaui>true</UseMaui>
-		<MauiVersion>9.0.0</MauiVersion>
 		<SingleProject>true</SingleProject>
 
 		<!-- Project Options -->
@@ -16,7 +15,7 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>VijayAnand.MauiBlazor.Markup</PackageId>
 		<Authors>Vijay Anand E G</Authors>
-		<Copyright>Copyright &#169; 2024 Vijay Anand E G</Copyright>
+		<Copyright>Copyright &#169; 2024-2025 Vijay Anand E G</Copyright>
 		<Product>VijayAnand.MauiBlazor.Markup is a toolkit with set of fluent helper methods and classes to simplify working with .NET MAUI Blazor in C#.</Product>
 		<Title>.NET MAUI Blazor - Fluent API Toolkit</Title>
 		<Description>VijayAnand.MauiBlazor.Markup is a toolkit with set of fluent helper methods and classes to simplify working with .NET MAUI Blazor in C#.</Description>
@@ -47,7 +46,6 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<!-- <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" /> -->
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
 	</ItemGroup>
 
@@ -57,8 +55,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Remove="release-notes-net6.txt" />
-		<None Remove="release-notes-net7.txt" />
 		<None Remove="release-notes-net8.txt" />
+		<None Remove="release-notes-net10.txt" />
 	</ItemGroup>
 </Project>
